management/coroot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coroot
  namespace: coroot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <YOUR_MONITORING_HOST>
      secretName: tls-coroot
  rules:
    - host: <YOUR_MONITORING_HOST>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coroot
                port:
                  number: 8080
